--- a/app/views/admin/site_steps/settings.html.erb
+++ b/app/views/admin/site_steps/settings.html.erb
@@ -16,63 +16,76 @@
     <div class="l-site-creation -site-settings">
       <div class="wrapper">
         <div class="settings c-inputs-container">
-        <div class="container">
+          <div class="container">
+            <%= f.fields_for :site_settings, \
+            (f.object.site_settings.collect.select {|x| %w[translate_english translate_french translate_spanish translate_georgian].include?(x.name)}.sort_by {|s| s.position}) do |settings_form| %>
+                <% setting = settings_form.object %>
+                <% case setting.name when 'translate_english' %>
+                    <%= settings_form.hidden_field :position, value: '7' %>
+                    <%= settings_form.hidden_field :name, value: 'translate_english' %>
+                    <div class="c-checkbox">
+                      <%= settings_form.check_box :value, id: 'translate_english' %>
+                      <%= settings_form.label 'Allow English translations', for: 'translate_english' %>
+                    </div>
+
+                <% when 'translate_french' %>
+                    <%= settings_form.hidden_field :position, value: '8' %>
+                    <%= settings_form.hidden_field :name, value: 'translate_french' %>
+
+                    <div class="c-checkbox">
+                      <%= settings_form.check_box :value, id: 'translate_french' %>
+                      <%= settings_form.label 'Allow French translations', for: 'translate_french' %>
+                    </div>
+
+                <% when 'translate_spanish' %>
+                    <%= settings_form.hidden_field :position, value: '9' %>
+                    <%= settings_form.hidden_field :name, value: 'translate_spanish' %>
+
+                    <div class="c-checkbox">
+                      <%= settings_form.check_box :value, id: 'translate_spanish' %>
+                      <%= settings_form.label 'Allow Spanish translations', for: 'translate_spanish' %>
+                    </div>
+
+                <% when 'translate_georgian' %>
+                    <%= settings_form.hidden_field :position, value: '16' %>
+                    <%= settings_form.hidden_field :name, value: 'translate_georgian' %>
+
+                    <div class="c-checkbox">
+                      <%= settings_form.check_box :value, id: 'translate_georgian' %>
+                      <%= settings_form.label 'Allow Georgian translations', for: 'translate_georgian' %>
+                    </div>
+                <% end %>
+            <% end %>
+          </div>
+          <div class="container">
+            <%= f.fields_for :site_settings, \
+            (f.object.site_settings.collect.select {|x| %w[default_site_language].include?(x.name)}.sort_by {|s| s.position}) do |settings_form| %>
+                <% setting = settings_form.object %>
+                <% case setting.name when 'default_site_language' %>
+                    <%= settings_form.hidden_field :position, value: '15' %>
+                    <%= settings_form.hidden_field :name, value: 'default_site_language' %>
+
+                    <%= settings_form.label 'Default site language', for: 'default_site_language' %>
+                    <div class="c-select -admin">
+                      <%= settings_form.select :value, {'English' => :en, 'French' => :fr, 'Spanish' => :es, 'Georgian' => :ka}, id: 'default_site_language' %>
+                    </div>
+                <% end %>
+            <% end %>
+          </div>
           <%= f.fields_for :site_settings, \
-            (f.object.site_settings.collect.select{|x| %w[translate_english translate_french translate_spanish translate_georgian].include?(x.name)}.sort_by { |s| s.position }) do |settings_form|%>
-            <% setting = settings_form.object %>
-            <% case setting.name when 'translate_english' %>
-              <%= settings_form.hidden_field :position, value: '7' %>
-              <%= settings_form.hidden_field :name, value: 'translate_english' %>
-              <div class="c-checkbox">
-                <%= settings_form.check_box :value, id: 'translate_english' %>
-                <%= settings_form.label 'Allow English translations', for: 'translate_english' %>
-              </div>
+          (f.object.site_settings.collect.select {|x| %w[transifex_api_key].include?(x.name)}.sort_by {|s| s.position}) do |settings_form| %>
+              <% setting = settings_form.object %>
+              <% case setting.name when 'transifex_api_key' %>
+                  <%= settings_form.hidden_field :position, value: '16' %>
+                  <%= settings_form.hidden_field :name, value: 'transifex_api_key' %>
 
-              <% when 'translate_french' %>
-              <%= settings_form.hidden_field :position, value: '8' %>
-              <%= settings_form.hidden_field :name, value: 'translate_french' %>
-
-              <div class="c-checkbox">
-                <%= settings_form.check_box :value, id: 'translate_french' %>
-                <%= settings_form.label 'Allow French translations', for: 'translate_french' %>
-              </div>
-
-              <% when 'translate_spanish' %>
-              <%= settings_form.hidden_field :position, value: '9' %>
-              <%= settings_form.hidden_field :name, value: 'translate_spanish' %>
-
-              <div class="c-checkbox">
-                <%= settings_form.check_box :value, id: 'translate_spanish' %>
-                <%= settings_form.label 'Allow Spanish translations', for: 'translate_spanish' %>
-              </div>
-
-              <% when 'translate_georgian' %>
-              <%= settings_form.hidden_field :position, value: '16' %>
-              <%= settings_form.hidden_field :name, value: 'translate_georgian' %>
-
-              <div class="c-checkbox">
-                <%= settings_form.check_box :value, id: 'translate_georgian' %>
-                <%= settings_form.label 'Allow Georgian translations', for: 'translate_georgian' %>
-              </div>
+                  <div class="container -big">
+                    <%= settings_form.label 'Transifex API key', for: 'transifex_api_key' %>
+                    <%= settings_form.text_field :value, id: 'transifex_api_key' %>
+                  </div>
               <% end %>
           <% end %>
-        </div>
-        <div class="container">
-          <%= f.fields_for :site_settings, \
-            (f.object.site_settings.collect.select{|x| %w[default_site_language].include?(x.name)}.sort_by { |s| s.position }) do |settings_form|%>
-            <% setting = settings_form.object %>
-            <% case setting.name when 'default_site_language' %>
-              <%= settings_form.hidden_field :position, value: '15' %>
-              <%= settings_form.hidden_field :name, value: 'default_site_language' %>
-
-              <%= settings_form.label 'Default site language', for: 'default_site_language' %>
-                <div class="c-select -admin">
-                  <%= settings_form.select :value, {'English' => :en, 'French' => :fr, 'Spanish' => :es, 'Georgian' => :ka}, id: 'default_site_language' %>
-                </div>
-            <% end %>
-          <% end %>
-        </div>
-          <%= f.fields_for :site_settings, (f.object.site_settings.collect.sort_by { |s| s.position }) do |settings_form| %>
+          <%= f.fields_for :site_settings, (f.object.site_settings.collect.sort_by {|s| s.position}) do |settings_form| %>
               <% setting = settings_form.object %>
               <% case setting.name when 'pre_footer' %>
                   <%= settings_form.hidden_field :position, value: '10' %>
