--- a/app/assets/stylesheets/layouts/management/l-dataset-creation.scss
+++ b/app/assets/stylesheets/layouts/management/l-dataset-creation.scss
@@ -38,6 +38,10 @@
           min-width: 140px;
           margin-right: 15px;
           text-align: right;
+
+          &.required::after{
+            content: '*'
+          }
         }
 
         input,
