--- a/app/assets/stylesheets/components/shared/c-loading-spinner.scss
+++ b/app/assets/stylesheets/components/shared/c-loading-spinner.scss
@@ -28,6 +28,17 @@ $spinner-velocity: 0.6s;
       z-index: 2;
       background-color: rgba($spinner-bg-color, 0.2);
     }
+
+    &.-blank {
+      &::before {
+        border: 1px solid $color-13;
+        border-radius: 4px;
+        background-color: $color-3;
+      }
+      &::after {
+        z-index: 2;
+      }
+    }
   }
 
   &::after {
@@ -47,6 +58,16 @@ $spinner-velocity: 0.6s;
 
   &.-big::after {
     border-width: $spinner-width * 2;
+  }
+
+  &.-btn {
+    color: transparent;
+    pointer-events: none;
+    outline: 0;
+    &::after {
+      border-top-color: $color-2;
+      border-right-color: $color-2;
+    }
   }
 }
 
