--- a/app/views/site_page/map.html.erb
+++ b/app/views/site_page/map.html.erb
@@ -209,7 +209,7 @@
 </script>
 
 <% content_for :external_js do %>
-    <script id="library-load" src="//wri-sites.s3.amazonaws.com/gfw-mapbuilder.org/library-releases/<%= @site_page.content['version'] || '1.1.12' %>.js"></script>
+    <script id="library-load" src="//wri-sites.s3.amazonaws.com/gfw-mapbuilder.org/library.gfw-mapbuilder.org/<%= @site_page.content['version'] || '1.1.12' %>.js"></script>
 
     <script>
       var mapDatabaseConfig = JSON.parse('<%= @site_page.content.nil? ? '{}' : @site_page.content['settings'].squish.gsub("'", %q(\\\')).html_safe %>')
