--- a/app/views/site_page/map.html.erb
+++ b/app/views/site_page/map.html.erb
@@ -201,6 +201,12 @@
   </symbol>
 </svg>
 
+<style>
+  #root {
+    min-height: 0;
+    height: calc(100% - 50px);
+  }
+</style>
 <div id="root"></div>
 <div id="share-modal" class="modal-wrapper hidden"></div>
 
