--- a/app/views/front/_cover.html.erb
+++ b/app/views/front/_cover.html.erb
@@ -1,7 +1,7 @@
-<%= react_component("CoverPage", {
-    page: @site_page,
-    site: @site_page.site,
-    siteTitleOnly: site_title_only,
-    image: image,
-    pageSize: defined?(size) ? size : nil
-}) %>
+<%= react_component('Root', {
+  page: @site_page,
+  site: @site_page.site,
+  siteTitleOnly: site_title_only,
+  image: image,
+  pageSize: defined?(size) ? size : nil
+} ) %>
