--- a/app/views/management/page_steps/map.html.erb
+++ b/app/views/management/page_steps/map.html.erb
@@ -22,7 +22,7 @@
           <div class="container">
             <label for="version">Version</label>
             <div class="c-select -small">
-              <%= ff.select 'version', MapVersion.order(:position).pluck(&:version) %>
+              <%= ff.select 'version', MapVersion.order(:position).pluck(:version) %>
             </div>
           </div>
           <div class="container">
