--- a/app/views/admin/map_versions/_form.html.erb
+++ b/app/views/admin/map_versions/_form.html.erb
@@ -1,34 +1,46 @@
-<%= form_for([:admin, @map_version]) do |f| %>
-  <% if @map_version.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@map_version.errors.count, "error") %> prohibited this route from being saved:</h2>
-
-      <ul>
-        <% @map_version.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-  <fieldset class="form-group row">
-    <%= f.label :version, class: 'col-sm-2 form-control-label' %>
-    <div class="col-sm-10"><%= f.text_field :version, class: 'form-control' %></div>
-  </fieldset>
-
-  <fieldset class="form-group row">
-    <%= f.label :position, class: 'col-sm-2 form-control-label' %>
-    <div class="col-sm-10"><%= f.number_field :position, class: 'form-control' %></div>
-  </fieldset>
-
-  <fieldset class="form-group row">
-    <%= f.label :description, class: 'col-sm-2 form-control-label' %>
-    <div class="col-sm-10"><%= f.text_field :description, class: 'form-control' %></div>
-  </fieldset>
-
-  <div class="form-group row">
-    <div class="col-sm-offset-2 col-sm-10">
-      <%= f.submit class: 'btn btn-primary' %>
+<% content_for :extended_header do %>
+  <div class="c-extended-header">
+    <div class="wrapper">
+      <h1>Map version</h1>
     </div>
   </div>
 <% end %>
+
+<%= form_for([:admin, @map_version]) do |f| %>
+
+  <div class="l-site-creation -name">
+    <div class="wrapper">
+      <div class="c-inputs-container js-urls">
+        <div class="container -big">
+
+          <fieldset class="form-group row">
+            <%= f.label :version, class: 'col-sm-2 form-control-label' %>
+            <div class="col-sm-10"><%= f.text_field :version, class: 'form-control' %></div>
+          </fieldset>
+
+          <fieldset class="form-group row">
+            <%= f.label :position, class: 'col-sm-2 form-control-label' %>
+            <div class="col-sm-10"><%= f.number_field :position, class: 'form-control' %></div>
+          </fieldset>
+
+          <fieldset class="form-group row">
+            <%= f.label :description, class: 'col-sm-2 form-control-label' %>
+            <div class="col-sm-10"><%= f.text_field :description, class: 'form-control' %></div>
+          </fieldset>
+
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="c-action-bar">
+    <div class="wrapper">
+      <%= link_to 'Cancel', admin_map_versions_path, class: 'c-button -outline -dark-text js-cancel' %>
+      <div>
+        <%= f.button 'SAVE', value: 'SAVE', type: 'submit', method: :put, class: 'c-button' %>
+      </div>
+    </div>
+  </div>
+<% end %>
+
+<%= render partial: 'shared/errors', locals: { resource: @map_version } %>
