First version of the GFW login

--- a/app/views/front/_menu.html.erb
+++ b/app/views/front/_menu.html.erb
@@ -32,6 +32,7 @@
       <ul>
         <li class="notranslate js-language-selector-mobile"></li>
       </ul>
+      <%= render 'front/user'%>
     </div>
   </div>
 
@@ -87,6 +88,9 @@
         </ul>
         <ul>
           <li class="notranslate js-language-selector"></li>
+        </ul>
+        <ul>
+          <%= render 'front/user'%>
         </ul>
       </div>
 
