public pages to react

--- a/app/views/site_page/homepage.html.erb
+++ b/app/views/site_page/homepage.html.erb
@@ -3,20 +3,8 @@
 <%= react_component('Public', {
   page: @site_page,
   site: @site_page.site,
+  siteSettings: defined?(@site_page.site.site_settings) ? @site_page.site.site_settings : nil,
   siteTitleOnly: @site_title_only,
   image: @image,
   pageSize: defined?(@size) ? @size : nil
 } ) %>
-
-<div class="c-content">
-  <div class="wrapper">
-    <div class="js-content"></div>
-    <input type="hidden" class="js-json-content" value="<%= OpenStruct.new(@site_page.content).json unless @site_page.content.blank? || OpenStruct.new(@site_page.content).json.blank? %>" />
-  </div>
-</div>
-
-<%= render 'front/footer' %>
-
-<script type="text/javascript">
-  window.route = 'Homepage';
-</script>
