move backbone tabs logic for pages to rails

--- a/app/views/management/site_pages/index.html.erb
+++ b/app/views/management/site_pages/index.html.erb
@@ -1,10 +1,10 @@
 <%= render partial: 'management/extended_header'%>
 <%= include_gon %>
-<div class="js-tabs"></div>
+
+<%= render partial: 'management/tabs'%>
 
 <div class="l-page-list">
   <div class="wrapper">
-
     <div class="c-action-toolbar">
       <ul class="buttons">
       </ul>
@@ -13,6 +13,6 @@
       </ul>
     </div>
 
-    <div class="js-table"></div>
+
   </div>
 </div>
