--- a/app/views/management/sites/structure.html.erb
+++ b/app/views/management/sites/structure.html.erb
@@ -3,7 +3,7 @@
 
 <div class="l-tabs">
   <div class="wrapper">
-    <div class="js-tabs"></div>
+    <%= render partial: 'management/tabs'%>
   </div>
 </div>
 
