--- a/app/views/management/widgets/index.html.erb
+++ b/app/views/management/widgets/index.html.erb
@@ -1,6 +1,7 @@
 <%= render partial: 'management/extended_header', locals: {type: 'widget'} %>
 <%= include_gon %>
-<div class="js-tabs"></div>
+
+<%= render partial: 'management/tabs'%>
 
 <div class="l-page-list">
   <div class="wrapper">
