--- a/app/assets/stylesheets/components/shared/c-action-toolbar.scss
+++ b/app/assets/stylesheets/components/shared/c-action-toolbar.scss
@@ -1,7 +1,8 @@
 .c-action-toolbar {
   display: flex;
-  align-items: center;
-  justify-content: space-between;
+  // Align items to the right, as we dont always have buttons in the toolbar and search is on right
+  align-items: right;
+  justify-content: flex-end;
   margin: 30px 0;
 
   > .buttons {
