--- a/app/views/management/site_pages/index.html.erb
+++ b/app/views/management/site_pages/index.html.erb
@@ -6,13 +6,17 @@
 <div class="l-page-list">
   <div class="wrapper">
     <div class="c-action-toolbar">
-      <ul class="buttons">
-      </ul>
       <ul class="filters">
         <li><div class="c-input-search js-table-search"></div></li>
       </ul>
     </div>
 
-
+    <div class="js-table"></div>
   </div>
 </div>
+
+<%= javascript_pack_tag 'application' %>
+
+<%= react_component('SitePages', {
+  pages: @formattedPages
+} ) %>
