--- a/app/views/layouts/management.html.erb
+++ b/app/views/layouts/management.html.erb
@@ -20,6 +20,7 @@
 <%= Gon::Base.render_data(camel_case: true, camel_depth: 3) %>
   <%= render 'management/header' %>
   <%= render 'shared/messages' %>
+  <%= render 'front/icons' %>
   <%= yield :extended_header %>
   <%= yield %>
 </body>
