--- a/app/assets/stylesheets/components/shared/c-modal.scss
+++ b/app/assets/stylesheets/components/shared/c-modal.scss
@@ -79,15 +79,21 @@
   width: 100vw;
   height: 100vh;
 
+  &__wrapper {
+    max-width: 530px;
+    margin: 50px auto 0 auto;
+    position: relative;
+  }
+
   &__body {
     position: relative;
-    max-width: 530px;
-    max-height: calc(100vh - 70px);
 
-    margin: 50px auto 0 auto;
+    max-height: calc(100vh - 80px);
     padding: 10px;
+
     background: #FFF;
 
+    overflow-y: scroll;
     border-radius: 5px;
   }
 
@@ -108,6 +114,32 @@
       fill: #FFF;
     }
 
+  }
+
+  &__contents {
+    padding: 0 10px;
+    h1 {
+      font-size: 26px;
+    }
+    p {
+      line-height: 1.5em;
+      font-size: 14px;
+    }
+  }
+
+  &__tabledata {
+    padding: 10px 0;
+    dl {
+      display: flex;
+      flex-flow: row;
+      dt {
+        flex: 0.3;
+        font-weight: 700;
+      }
+      dd {
+        flex: 0.7;
+      }
+    }
   }
 
   &__backdrop {
