widgets admin page to react

--- a/app/views/management/widgets/index.html.erb
+++ b/app/views/management/widgets/index.html.erb
@@ -3,17 +3,7 @@
 
 <%= render partial: 'management/tabs'%>
 
-<div class="l-page-list">
-  <div class="wrapper">
-
-    <div class="c-action-toolbar">
-      <ul class="buttons">
-      </ul>
-      <ul class="filters">
-        <li><div class="c-input-search js-table-search"></div></li>
-      </ul>
-    </div>
-
-    <div class="js-table"></div>
-  </div>
-</div>
+<%= javascript_pack_tag 'application' %>
+<%= react_component('WidgetsPage', {
+  widgets: @formattedWidgets
+} ) %>
