--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -11,7 +11,11 @@
 
 <%= include_gon %>
 
-<div class="js-tabs"></div>
+<ul class="c-tabs">
+  <li class="tab"><a href="/admin/sites/">Sites</a></li>
+  <li class="tab" aria-selected="true"><a href="/admin/users/">Users</a></li>
+  <li class="tab"><a href="/admin/map_versions/">Maps</a></li>
+</ul>
 
 <div class="l-user-list">
   <div class="wrapper">
