--- a/app/views/management/_header.html.erb
+++ b/app/views/management/_header.html.erb
@@ -16,6 +16,7 @@
           </ul>
       <% end %>
     </div>
-    <div class="user-links js-user-links"></div>
+
+    <%= render partial: 'shared/admin_user_dropdown'%>
   </div>
 </div>
