--- a/app/views/site_page/analysis_dashboard.html.erb
+++ b/app/views/site_page/analysis_dashboard.html.erb
@@ -1,6 +1,6 @@
 <%= Gon::Base.render_data(camel_case: true, camel_depth: 3) %>
 
-<%= render 'front/cover', image: @alternative_image, size: 'small' %>
+<!-- render 'front/cover', image: @alternative_image, size: 'small' -->
 
 <div class="l-analysis-dashboard">
   <div class="bookmarks">
