Use the snake case for gon accross the project
We previously had a mix of snake case and camel case.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,7 +38,7 @@
 </head>
 
 <body <%= yield :body_class %>>
-  <%= Gon::Base.render_data(camel_case: true, camel_depth: 3) %>
+  <%= Gon::Base.render_data %>
   <%= render 'front/menu' %>
   <%= render 'front/icons' %>
   <%= yield %>
