--- a/app/views/layouts/management.html.erb
+++ b/app/views/layouts/management.html.erb
@@ -17,7 +17,7 @@
   <%= favicon_link_tag %>
 </head>
 <body <%= yield :body_class %>>
-<%= Gon::Base.render_data(camel_case: true, camel_depth: 3) %>
+<%= Gon::Base.render_data %>
   <%= render 'management/header' %>
   <%= render 'shared/messages' %>
   <%= render 'front/icons' %>
