--- a/app/views/contexts/index.html.erb
+++ b/app/views/contexts/index.html.erb
@@ -9,7 +9,7 @@
   </div>
 <% end %>
 
-<%= Gon::Base.render_data(camel_case: true, camel_depth: 3) %>
+<%= Gon::Base.render_data %>
 
 <div class="l-contexts-list">
   <div class="wrapper">
