--- a/app/views/management/dataset_steps/context.html.erb
+++ b/app/views/management/dataset_steps/context.html.erb
@@ -8,7 +8,7 @@
 </div>
 
 <%= render partial: 'shared/navigation_header', locals: {form_steps: wizard_steps, id: @dataset.id, current_step: step, step_names: @steps_names} %>
-<%= Gon::Base.render_data(camel_case: true, camel_depth: 3) %>
+<%= Gon::Base.render_data %>
 
 <%= form_for @dataset, url: wizard_path, method: :put do |f| %>
   <div class="l-dataset-creation -context">
