move vega defenitions to there own folder

--- a/app/views/site_page/analysis_dashboard.html.erb
+++ b/app/views/site_page/analysis_dashboard.html.erb
@@ -44,3 +44,7 @@
 
 <%= render 'front/footer' %>
 
+<script type="text/javascript">
+  // XXX : While we are dependent on backbone, keep this here so we render the dashboard route
+  window.route = 'Dashboard';
+</script>
